# cmakesample

./: .gitignore  CMakeLists.txt  README.md  cmakesample.desktop  main.cpp
qml/: cmakesample_generic.qml
rpm/: cmakesample.changes.in  cmakesample.spec  cmakesample.yaml
translations/: sample-de.qm
